User synchronized with zabbix by a button.

--- a/app/views/users_admin/index.html.erb
+++ b/app/views/users_admin/index.html.erb
@@ -41,6 +41,7 @@
 </div>
 
 <%= link_to t('users.btn.add'), new_users_admin_path, class: 'btn btn-primary btn-sm' %>
+<button class="btn btn-sm btn-default" id="sync_zabbix"><%= t('users.btn.sync') %></button>
 
 <div class="page-header"></div>
 <div id="user-permission-edit" style="padding-bottom: 70px;"></div>
