--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,11 +30,11 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :master, class: 'control-label col-sm-2' %>
+      <%= f.label :master, master_label, class: 'control-label col-sm-2' %>
       <div class="col-sm-5">
         <div class="checkbox">
         <% if User.count == 0 %>
-          <%= f.check_box :master, {readonly: true, checked: true} %>
+          <%= f.check_box :master, {checked: true} %>
         <% else %>
           <%= f.check_box :master %>
         <% end %>
@@ -44,11 +44,11 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :admin, class: 'control-label col-sm-2' %>
+      <%= f.label :admin, admin_label, class: 'control-label col-sm-2' %>
       <div class="col-sm-5">
         <div class="checkbox">
         <% if User.count == 0 %>
-          <%= f.check_box :admin, {readonly: true, checked: true} %>
+          <%= f.check_box :admin, {checked: true} %>
         <% else %>
           <%= f.check_box :admin %>
         <% end %>
