--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -153,6 +153,7 @@
 <%= render 'vue/monitoring_tabpane' %>
 <%= render 'vue/edit_monitoring_tabpane' %>
 <%= render 'vue/rds_tabpane'  %>
+<%= render 'vue/elb_tabpane'  %>
 <%= render 'vue/s3_tabpane'  %>
 <%= render 'vue/vue_paginator' %>
 
