--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -125,6 +125,10 @@
         <rds-tabpane v-if="tabpane_active(physical_id)" v-with="physical_id: physical_id" class="tab-pane" v-show="!loading"></rds-tabpane>
       </div>
 
+      <div v-repeat="current_infra.resources.elb_instances">
+        <elb-tabpane v-if="tabpane_active(physical_id)" v-with="physical_id: physical_id" class="tab-pane" v-show="!loading"></elb-tabpane>
+      </div>
+
       <div v-repeat="current_infra.resources.s3_buckets">
         <s3-tabpane v-if="tabpane_active(physical_id)" v-with="physical_id: physical_id" class="tab-pane" v-show="!loading"></s3-tabpane>
       </div>
