Can Deregister EC2 instance by web UI

--- a/app/views/vue/_elb_tabpane.html.erb
+++ b/app/views/vue/_elb_tabpane.html.erb
@@ -9,7 +9,8 @@
 
 <table class="table table-condensed table-striped" v-repeat="e: ec2_instances">
   <caption>
-    <a href="#" v-on="click: show_ec2(e.instance_id)">{{e.instance_id}}</a>
+    <a href="#" v-on="click: show_ec2(e.instance_id)">{{e.instance_id}}</a>&nbsp;
+    <button class="btn btn-danger btn-xs" v-on="click: deregister(e.instance_id)">Deregister from ELB</button>
   </caption>
 
   <thead>
