--- a/app/views/infrastructures/_form.html.erb
+++ b/app/views/infrastructures/_form.html.erb
@@ -31,7 +31,7 @@
 
       <div class="row">
         <div class="col-sm-12">
-        <button class="btn btn-primary create_ec2_key">New Keypair</button>
+          <button class="btn btn-primary create_ec2_key"><%= t 'ec2_private_keys.btn.new' %></button>
         </div>
       </div>
 
