--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -30,7 +30,7 @@
           <li v-class="disabled : current_infra.token_invalid">
             <a href="#" tabindex="-1" v-on="click: show_add_modify()"><%= t 'infrastructures.btn.apply_template' %></a>
           </li>
-          <li><a href="#" tabindex="-1" v-on="click: show_add_ec2"><%= t 'infrastructures.add_ec2' %></a></li>
+          <li><a href="#" tabindex="-1" v-on="click: show_add_ec2()"><%= t 'infrastructures.add_ec2' %></a></li>
           <li>
             <a href="#" tabindex="-1" v-on="click: show_cf_history()"><%= t 'infrastructures.btn.template_history' %></a>
           </li>
