Vue component for Bootstrap tooltip

--- a/app/views/infrastructures/_resource_tabs.html.erb
+++ b/app/views/infrastructures/_resource_tabs.html.erb
@@ -7,7 +7,7 @@
     <small>{{screen_name(ec2)}}</small>
     <small v-if="tabpane_active(ec2.physical_id)"><%= glyphicon 'refresh' %></small>
     <!-- workaround http://stackoverflow.com/questions/18730116/twitter-bootstrap-3-0-how-do-i-badge-badge-important-now -->
-    <serverspec-status-badge v-if="!ec2.serverspec_status"></serverspec-status-badge>
+    <bootstrap-tooltip v-if="!ec2.serverspec_status" v-with="title: 'Serverspec failed'" class="badge progress-bar-danger">!</bootstrap-tooltip>
   </a>
 </li>
 
