--- a/app/views/layouts/_navbar_bottom.html.erb
+++ b/app/views/layouts/_navbar_bottom.html.erb
@@ -5,10 +5,8 @@
     <div class="navbar-text pull-right">
       <script id="toggle-button-template" type="text/template">
       <span v-show="state">
-        <button href="#" class="btn btn-xs"
-        v-attr="disabled: is_inprogress()" v-on="click: toggle()"
-        v-class="btn-success: running, btn-default: stopped, btn-warning: is_inprogress()">
-          <span v-class="blinking: is_inprogress()" class="glyphicon glyphicon-off"></span>&nbsp;
+        <button href="#" class="btn btn-xs" v-attr="disabled: is_inprogress" v-on="click: toggle()" v-class="btn_class">
+          <span v-class="blinking: is_inprogress" class="glyphicon glyphicon-off"></span>&nbsp;
           <span v-text="status_text"></span>
         </button>
       </span>
