Implement Periodic Serverspec run

--- a/app/views/vue/_serverspec_tabpane.html.erb
+++ b/app/views/vue/_serverspec_tabpane.html.erb
@@ -34,11 +34,61 @@
 <div class="col-md-12 col-sm-12">
   <div v-if="!loading" class="form-actions-top">
     <button v-on="click: run()"      class="btn btn-sm btn-primary" v-attr="disabled: !can_run"><%= t 'serverspecs.btn.run' %></button>
+    <button class="btn btn-sm btn-warning" href="#change-schedule-modal" data-toggle="modal"><%= t 'serverspec_schedules.change_schedule' %></button>
     <button v-on="click: show_ec2()" class="btn btn-sm btn-default"><%= t 'helpers.links.cancel' %></button>
   </div>
 
   <div v-if="loading" class="form-actions-top">
     <div-loader></div-loader>
+  </div>
+</div>
+
+<%# modal for change serverspec schedule %>
+<div id="change-schedule-modal" class="modal fade" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <button class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title"><%= t 'serverspec_schedules.change_schedule' %></h4>
+      </div>
+
+      <div class="modal-body">
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" v-model="enabled" v-attr="disabled: loading_s"><%= t 'serverspec_schedules.run_periodically' %>
+          </label>
+        </div>
+        <form class="form-inline">
+          <div class="form-group" v-if="enabled">
+            <select v-model="frequency" v-attr="disabled: loading_s" class="form-control">
+              <% ServerspecSchedule::frequencies.keys.each do |f| %>
+                <option value=<%= f %>><%= t "serverspec_schedules.frequency.#{f}" %></option>
+              <% end %>
+            </select>
+            <select v-model="day_of_week" v-attr="disabled: loading_s" v-if="frequency === 'weekly'" class="form-control">
+              <% ServerspecSchedule::day_of_weeks.keys.each do |e| %>
+                <option value=<%= e %>><%= t "serverspec_schedules.day_of_week.#{e}" %></option>
+              <% end %>
+            </select>
+            <select v-model="time" v-attr="disabled: loading_s" class="form-control">
+              <% 0.upto(23) do |n| %>
+                <option><%= n %></option>
+              <% end %>
+            </select>
+            <%= t 'serverspec_schedules.o_clock' %>
+          </div>
+        </form>
+      </div>
+
+      <div class="modal-footer">
+        <div v-if="!loading_s">
+          <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.close') %></button>
+          <button v-on="click: change_schedule()" class="btn btn-warning"><%= t('helpers.links.change') %></button>
+        </div>
+        <div-loader v-if="loading_s"></div-loader>
+      </div>
+    </div>
   </div>
 </div>
 </script>
