--- a/app/views/vue/_add_modify_tabpane.html.erb
+++ b/app/views/vue/_add_modify_tabpane.html.erb
@@ -24,7 +24,7 @@ Array of CfTemplate instance.
       <label for="add_modify_value"><%= t('cf_templates.cf_template') %></label>
       <textarea v-model="value" id="add_modify_value" class="form-control" cols="20" rows="15"></textarea>
     </div>
-    <div class="alert alert-danger" v-show="value | jsonParseErr">{{value | jsonParseErr}}</div>
+    <div class="alert alert-danger" v-show="jsonParseErr">{{jsonParseErr}}</div>
   </fieldset>
 </div>
 
@@ -46,14 +46,14 @@ Array of CfTemplate instance.
       </select>
     </div>
   </div>
-  
+
   <div class="form-actions-top">
     <button class="btn btn-default" v-on="click: select_cft()"><%= glyphicon "chevron-left" %></button>
   </div>
 </div>
 
 <div class="form-actions-top col-md-12 col-sm-12">
-  <button class="btn btn-primary btn-sm" v-on="click: submit()">
+  <button class="btn btn-primary btn-sm" v-attr="disabled: jsonParseErr" v-on="click: submit()">
     <%= t 'cf_templates.insert_parameters' %>
   </button>
 </div>
