--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -1,7 +1,7 @@
 <div id="infra-show"></div>
 
 <script id="infra-show-template" type="text/template">
-<div id="infra-show-template" v-cloak v-show="current_infra.stack">
+<div v-cloak v-show="current_infra.stack">
   <h3><%= t 'infrastructures.stack_info' %>
     <small>#{{current_infra.stack.name}} :
       <span v-class="'label', status_label_class()">{{current_infra.stack.status.name}}</span>
