Key Pair Manager :mag: (in developing)

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -33,6 +33,7 @@
             <ul class="dropdown-menu">
               <li>
                 <%= link_to "Dishes", dishes_path(project_id: project.id) %>
+                <%= link_to "Key Pairs", key_pairs_project_path(id: project.id) %>
               </li>
             </ul>
           </div>
