--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -32,8 +32,8 @@
             </a>
             <ul class="dropdown-menu">
               <li>
-                <%= link_to "Dishes", dishes_path(project_id: project.id) %>
-                <%= link_to "Key Pairs", key_pairs_project_path(id: project.id) %>
+                <%= link_to t('dishes.dishes'), dishes_path(project_id: project.id) %>
+                <%= link_to t('key_pairs.key_pairs'), key_pairs_project_path(id: project.id) %>
               </li>
             </ul>
           </div>
