--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -33,7 +33,7 @@
             <ul class="dropdown-menu">
               <li>
                 <%= link_to t('dishes.dishes'), dishes_path(project_id: project.id) %>
-                <%= link_to t('key_pairs.key_pairs'), key_pairs_project_path(id: project.id) %>
+                <%= link_to t('key_pairs.key_pairs'), key_pairs_path(project_id: project.id) %>
               </li>
             </ul>
           </div>
