--- a/app/views/key_pairs/index.html.erb
+++ b/app/views/key_pairs/index.html.erb
@@ -16,7 +16,10 @@
       </div>
       <div class="panel panel-primary">
         <div class="list-group">
-          <a v-on="click: switch_region" v-repeat="region : regions" v-class="active: region.selected" class="list-group-item">{{region.name}}</a>
+          <a href="#" v-on="click: switch_region(region.name)" v-repeat="region: regions" v-class="active: region.selected, disabled: no_key_pairs_belong_to_region(region.name)" class="list-group-item">
+            {{region.name}}
+            <span class="badge" v-text="number_of_key_pairs(region.name) | zero_as_blank"></span>
+          </a>
         </div>
       </div>
     </div>
@@ -36,16 +39,16 @@
         </tr>
       </thead>
       <tbody>
-        <tr v-repeat="key_pair : key_pairs" v-show="selected === 'All' || selected === key_pair.region">
+        <tr v-repeat="key_pair : key_pairs" v-show="belongs_to_region(key_pair.region)">
           <td>{{key_pair.name}}</td>
           <td>{{key_pair.fingerprint}}</td>
           <td>{{key_pair.region}}</td>
           <td>{{key_pair.using_sign}}</td>
           <% if @allow_change %>
             <td>
-              <a href="#" v-on="click: delete_key_pair(key_pair)">
+              <button class="btn-link" v-if="!key_pair.using" v-on="click: delete_key_pair(key_pair)">
                 <span class="glyphicon glyphicon-trash"></span>
-              </a>
+              </button>
             </td>
           <% end %>
         </tr>
