--- a/app/views/key_pairs/index.html.erb
+++ b/app/views/key_pairs/index.html.erb
@@ -16,7 +16,7 @@
       </div>
       <div class="panel panel-primary">
         <div class="list-group">
-          <a href="#" v-on="click: switch_region(region.name)" v-repeat="region: regions" v-class="active: region.selected, disabled: no_key_pairs_belong_to_region(region.name)" class="list-group-item">
+          <a href="#" v-on="click: switch_region(region.name)" v-repeat="region: regions" v-class="active: region.selected, disabled: has_no_key_pairs(region.name)" class="list-group-item">
             {{region.name}}
             <span class="badge" v-text="number_of_key_pairs(region.name) | zero_as_blank"></span>
           </a>
@@ -39,7 +39,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr v-repeat="key_pair : key_pairs" v-show="belongs_to_region(key_pair.region)">
+        <tr v-repeat="key_pair : key_pairs" v-show="is_selected(key_pair.region)">
           <td>{{key_pair.name}}</td>
           <td>{{key_pair.fingerprint}}</td>
           <td>{{key_pair.region}}</td>
