--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -20,28 +20,13 @@
         <td><%= infra.region %></td>
         <td><%= infra.keypairname || t('infrastructures.msg.no_keypair') %></td>
         <td>
-          <% stack_availability = infra.status.present? %>
-
           <%= button_show_infra(infra) %>
 
           <%= button_serverspecs(infra.id) %>
 
-          <% if current_user.admin? %>
-
-            <% if stack_availability %>
-              <%= link_to t('.edit', default: t("helpers.links.edit")),
-                "#",
-                class: 'btn btn-default btn-xs disabled' %>
-            <% else %>
-              <%= link_to t('.edit', default: t("helpers.links.edit")),
-                edit_infrastructure_path(infra),
-                class: 'btn btn-default btn-xs' %>
-            <% end %>
-            <%= button_detach_stack(infra) %>
-            <%= button_delete_stack(infra) %>
-
-          <% end %>
-
+          <%= button_edit_infra(infra) %>
+          <%= button_detach_stack(infra) %>
+          <%= button_delete_stack(infra) %>
         </td>
       </tr>
     <% end %>
@@ -52,7 +37,7 @@
   <%= paginate(@infrastructures) %>
 </div>
 
-<%= button_add_infra(@selected_client, @selected_project) if current_user.admin? %>
+<%= button_add_infra(@selected_project) %>
 
 <div class="page-header"></div>
 
