--- a/app/views/key_pairs/index.html.erb
+++ b/app/views/key_pairs/index.html.erb
@@ -14,7 +14,7 @@
         <label><%= t('key_pairs.region') %></label>
         <button class="btn btn-default btn-sm" style="float: right" v-attr="disabled: loading" v-on="click: reload"><span class="glyphicon glyphicon-refresh"></span></button>
       </div>
-      <div class="panel panel-primary">
+      <div class="panel panel-primary" v-if="regions">
         <div class="list-group">
           <a href="#" v-on="click: switch_region(region.name)" v-repeat="region: regions" v-class="active: region.selected, disabled: has_no_key_pairs(region.name)" class="list-group-item">
             {{region.name}}
