--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -214,7 +214,7 @@ Arguments:
       <div class="modal-footer">
         <div v-if="!loading">
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.close') %></button>
-          <button v-on="click: change_scale()" class="btn btn-warning"><%= t('helpers.links.change') %></button>
+          <button v-on="click: change_scale()" v-attr="disabled: !change_scale_type_to" class="btn btn-warning"><%= t('helpers.links.change') %></button>
         </div>
         <div-loader v-if="loading"></div-loader>
       </div>
